# medschool-api

./: .env.example  .gitignore  Makefile  pyproject.toml
docker/: Dockerfile  docker-compose.yml  run-app.sh
src/: main.py
src/models/: base.py  base_application_error.py  validaiton_error_data.py
src/orm/models/: apply.py  base.py  client.py  clients.py  lesson.py  lessons.py
web/routers/clients/: router.py
